fix: add missing color and fix style

--- a/src/scss/helpers/_typography.scss
+++ b/src/scss/helpers/_typography.scss
@@ -4,6 +4,7 @@
     url('../../assets/fonts/Mont-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
     url('../../assets/fonts/Mont-SemiBold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -20,4 +22,5 @@
     url('../../assets/fonts/Mont-Heavy.woff') format('woff');
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
